--- a/css/style.css
+++ b/css/style.css
@@ -523,16 +523,20 @@ li:focus-within>button>.arrow {
     font-size: 24px;
     margin-left: 20px;
 }
+
 .video-content {
     display: flex;
     justify-content: space-between;
 }
+
 .video-kiri {
     width: 60%;
 }
+
 .video-kanan {
     width: 39%;
 }
+
 .video-1 {
     width: 100%;
     height: 213px;
@@ -556,6 +560,7 @@ li:focus-within>button>.arrow {
     height: 20%;
     margin: 18px 0px;
 }
+
 .video-2 {
     width: 100%;
     height: 138px;
@@ -579,6 +584,7 @@ li:focus-within>button>.arrow {
     height: 10%;
     margin: 25px 0px;
 }
+
 .video-3 {
     width: 100%;
     height: 138px;
@@ -588,6 +594,7 @@ li:focus-within>button>.arrow {
     background-repeat: no-repeat;
     border-radius: 10px;
 }
+
 .video-3 a::after {
     content: '';
     position: absolute;
@@ -601,6 +608,7 @@ li:focus-within>button>.arrow {
     height: 10%;
     margin: 25px 0px;
 }
+
 .jv-video-date {
     border: none;
     font-size: 16px;
@@ -608,14 +616,17 @@ li:focus-within>button>.arrow {
     font-weight: 500;
     padding: 0;
 }
+
 .jv-video-txt p {
     font-size: 16px;
 }
+
 .jv-video-txt a {
     text-decoration: none;
     color: rgb(59, 59, 59);
     font-weight: bold;
 }
+
 .btn-primary {
     background: none;
     display: flex;
@@ -624,8 +635,9 @@ li:focus-within>button>.arrow {
     width: auto;
     text-align: left;
     color: #fff;
-    
+
 }
+
 .btn-primary a {
     font-size: 16px;
     text-decoration: none;
@@ -639,8 +651,123 @@ li:focus-within>button>.arrow {
 }
 
 /* NEWS  */
-.news-content {
-    width: 50%;
+.list-news {
     display: flex;
     justify-content: space-between;
+}
+
+.news-kiri {
+    width: 50%;
+}
+
+.news-kanan {
+    width: 50%;
+}
+
+.jv-desc-item {
+    display: flex;
+    border: none;
+    margin: 0 0 25px 0px;
+}
+
+.body-news {
+    width: 70%;
+    margin-left: 10px;
+    position: relative;
+
+}
+
+.news-1 {
+    width: 100px;
+    height: 100px;
+    background-image: url('https://japanview.tv/wp-content/uploads/2022/12/1-1.jpg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    border-radius: 5px;
+    display: block;
+}
+
+.news-2 {
+    width: 100px;
+    height: 100px;
+    background-image: url('https://japanview.tv/wp-content/uploads/2022/12/sub1-1200x800.jpg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    border-radius: 5px;
+    display: block;
+}
+
+.news-3 {
+    width: 100px;
+    height: 100px;
+    background-image: url('https://japanview.tv/wp-content/uploads/2022/12/thumb.jpg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    border-radius: 5px;
+    display: block;
+}
+
+.news-4 {
+    width: 100px;
+    height: 100px;
+    background-image: url('https://japanview.tv/wp-content/uploads/2022/11/upi-01.jpg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    border-radius: 5px;
+    display: block;
+}
+
+.jv-desc-date {
+    border: none;
+    font-size: 16px;
+    color: #999;
+    font-weight: 500;
+    padding: 0;
+    position: absolute;
+    bottom: 0px;
+}
+
+.jv-desc-txt p {
+    font-size: 16px;
+}
+
+.jv-desc-txt a {
+    text-decoration: none;
+    color: rgb(59, 59, 59);
+    font-weight: bold;
+}
+
+/* ARTICLES  */
+.jv-article-img {
+    background-image: url('https://japanview.tv/wp-content/uploads/2022/12/01-1-1200x800.jpg'), linear-gradient(to bottom, rgba(163, 66, 94, 0) 0%, rgba(141, 82, 99, 0.418) 60%, rgb(172, 93, 114) 100%);
+    background-blend-mode: soft-light;
+    width: 100%;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    border-radius: 10px;
+}
+
+/* target all bullets */
+.swiper-pagination-bullet.swiper-pagination-bullet {
+    background-color: #f4a9be;
+    opacity: 1;
+    height: 15px;
+    width: 15px;
+}
+
+.swiper-pagination-bullet.swiper-pagination-bullet-active {
+    background-color: #ae7182;
+    opacity: 1;
+    height: 15px;
+    width: 15px;
+}
+
+.swiper-pagination {
+    position: absolute;
+    margin-top: 50px;
 }
