--- a/css/style.css
+++ b/css/style.css
@@ -483,7 +483,7 @@ li:focus-within>button>.arrow {
     margin-bottom: 20px;
 }
 
-.tittle-kiri {
+.tittle-left {
     display: flex;
     width: 70%;
     height: 100%;
@@ -529,11 +529,11 @@ li:focus-within>button>.arrow {
     justify-content: space-between;
 }
 
-.video-kiri {
+.video-left {
     width: 60%;
 }
 
-.video-kanan {
+.video-right {
     width: 39%;
 }
 
@@ -656,11 +656,11 @@ li:focus-within>button>.arrow {
     justify-content: space-between;
 }
 
-.news-kiri {
+.news-left {
     width: 50%;
 }
 
-.news-kanan {
+.news-right {
     width: 50%;
 }
 
@@ -901,7 +901,7 @@ li:focus-within>button>.arrow {
     display: block;
 }
 
-.title-2-kiri {
+.title-2-left {
     display: flex;
     justify-content: space-between;
     width: 100%;
@@ -958,7 +958,7 @@ position: relative;
 .tab-content-box {
     display: none;
     background: #cb8e9f;
-    padding: 20px;
+    padding: 10px 10px 1px 10px;
 }
 .tab-content-box:nth-of-type(1) {
     background: #cb8e9f;
@@ -976,11 +976,18 @@ position: relative;
 .jv-list-tags a {
     padding: 0px 10px;
     border-radius: 10px;
-    font-size: 12px;
+    font-size: 10px;
     font-weight: lighter;
     color: #676767;
     margin: 0;
     background-color: #fff;
+}
+.jv-desc-txt .excerpt{
+    font-size: 12px;
+    font-weight: lighter;
+    color: rgb(59, 59, 59);
+    margin: 0;
+    padding: 2px 0px 10px;
 }
 .experience-1 {
     width: 100px;
@@ -1022,4 +1029,12 @@ position: relative;
     background-repeat: no-repeat;
     border-radius: 5px;
     display: block;
+}
+.jv-experience-item {
+display: flex;
+    border: none;
+    margin: 0 0 10px 0px;
+    background: rgba(255, 255, 255, 0.774);
+    padding: 10px;
+    border-radius: 10px;
 }
